--- a/src/main/resources/teampixl/com/pixlpos/fxml/cookconsole/CookStage2.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/cookconsole/CookStage2.fxml
@@ -44,27 +44,25 @@
         </AnchorPane>
     </left>
     <right>
-        <AnchorPane style="-fx-background-color: #f5f5f5;" BorderPane.alignment="CENTER">
-
-
+        <AnchorPane styleClass="root-anchor" BorderPane.alignment="CENTER">
         </AnchorPane>
     </right>
     <bottom>
         <AnchorPane maxHeight="0.0" maxWidth="0.0" prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
     </bottom>
     <center>
-        <AnchorPane style="-fx-background-color: #f5f5f5;" BorderPane.alignment="TOP_LEFT">
+        <AnchorPane styleClass="root-anchor" BorderPane.alignment="TOP_LEFT">
             <padding>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
          <children>
-            <VBox prefHeight="680.8" prefWidth="980.0" spacing="3.0" styleClass="order-container" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <VBox prefHeight="660.0" prefWidth="980.0" spacing="3.0" styleClass="order-container" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <HBox alignment="CENTER" minHeight="60.0">
                      <children>
                         <AnchorPane prefHeight="60.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label layoutX="441.0" layoutY="15.0" styleClass="order-label" text="Orders" />
+                              <Label layoutX="441.0" layoutY="15.0" styleClass="order-label" text="Orders" fx:id="orders" />
                            </children>
                         </AnchorPane>
                      </children>
