--- a/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/WaiterStage2.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/WaiterStage2.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@waiterstage2.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teampixl.com.pixlpos.controllers.waiterconsole.WaiterScreen2Controller">
+<fx:root type="BorderPane" prefHeight="720.0" prefWidth="1280.0" stylesheets="@waiterstage2.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teampixl.com.pixlpos.controllers.waiterconsole.WaiterScreen2Controller">
     <left>
         <AnchorPane prefWidth="500.0" BorderPane.alignment="CENTER">
          <children>
@@ -306,4 +306,4 @@
          </children>
       </AnchorPane>
    </top>
-</BorderPane>
+</fx:root>
