--- a/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/waiterstage2.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/waiterstage2.css
@@ -50,12 +50,33 @@
     -fx-hbar-policy: never;
     -fx-vbar-policy: never;
 }
-.list-cell:filled:selected:focused,
-.list-cell:filled:selected,
-.list-cell:even,
-.list-cell:odd {
-    -fx-background-color: transparent;
+
+#orderitemslistview .list-cell:selected {
+    -fx-background-color: #8f9bb3;
+    -fx-text-fill: black;
 }
+
+#orderitemslistview .list-cell {
+    -fx-text-fill: black;
+    -fx-background-color: white;
+}
+
+/* Style for the "+ Add Note" label */
+.add-note-label {
+    -fx-text-fill: blue;
+    -fx-cursor: hand;
+}
+
+/* Style for the TextField inside the ListCell */
+.list-cell .text-field {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-focus-color: transparent;
+    -fx-faint-focus-color: transparent;
+    -fx-text-fill: black;
+    -fx-padding: 0;
+}
+
 .list-pane .scroll-bar:horizontal {
     -fx-opacity: 0;      /* Makes the scrollbar invisible */
 
