--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Users/adminusers.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Users/adminusers.css
@@ -155,6 +155,9 @@
 .table-header {
     -fx-background-color: #EFF4FA;
 }
+.table-header-exclusive {
+    -fx-background-color: #FFFFFF;
+}
 /* database label text styling */
 .database-label {
     -fx-text-fill: #8f9bb3;
