--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Users/AdminUsers.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Users/AdminUsers.fxml
@@ -39,7 +39,7 @@
                     <children>
                         <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../../../images/search_icon.png" />
+                                <Image url="@../../../images/adminicons/search_icon.png" />
                             </image>
                             <HBox.margin>
                                 <Insets left="15.0" top="7.0" />
@@ -83,7 +83,7 @@
                     <children>
                         <ImageView fitHeight="74.0" fitWidth="68.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="71.0" AnchorPane.rightAnchor="71.0" AnchorPane.topAnchor="5.0">
                             <image>
-                                <Image url="@../../../images/account_user_icon.png" />
+                                <Image url="@../../../images/adminicons/account_user_icon.png" />
                             </image>
                         </ImageView>
                         <Text fx:id="greeting" layoutX="36.0" layoutY="120.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="header-label" text="Hello, Admin" AnchorPane.leftAnchor="36.0" AnchorPane.topAnchor="95.41300010681152" />
@@ -98,7 +98,7 @@
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@../../../images/home_icon.png" />
+                                        <Image url="@../../../images/adminicons/home_icon.png" />
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -110,7 +110,7 @@
                             <graphic>
                                 <ImageView fitHeight="19.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@../../../images/blue_users_icon.png" />
+                                        <Image url="@../../../images/adminicons/blue_users_icon.png" />
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -119,7 +119,7 @@
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@../../../images/menu_icon.png" />
+                                        <Image url="@../../../images/adminicons/menu_icon.png" />
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -128,7 +128,7 @@
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@../../../images/box_icon.png" />
+                                        <Image url="@../../../images/adminicons/box_icon.png" />
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -137,7 +137,7 @@
                             <graphic>
                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@../../../images/analytics_icon.png" />
+                                        <Image url="@../../../images/adminicons/analytics_icon.png" />
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -150,7 +150,7 @@
                             <graphic>
                                 <ImageView fitHeight="22.0" fitWidth="101.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@../../../images/logout_icon.png" />
+                                        <Image url="@../../../images/adminicons/logout_icon.png" />
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -198,7 +198,7 @@
                   <ButtonBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-radius: 10;" BorderPane.alignment="CENTER">
                     <buttons>
                       <Button fx:id="submitbutton" mnemonicParsing="false" onAction="#onSubmitButtonClick" styleClass="submit-button" text="Submit" />
-                        <Button fx:id="adduserbutton" layoutX="196.0" layoutY="15.0" mnemonicParsing="false" onAction="#onAddUserButtonClick" styleClass="add-button" text="Add Item +" />
+                        <Button fx:id="adduserbutton" layoutX="196.0" layoutY="15.0" mnemonicParsing="false" onAction="#onAddUserButtonClick" styleClass="add-button" text="Add" />
                         <Button fx:id="cancelbutton" layoutX="196.0" layoutY="15.0" mnemonicParsing="false" onAction="#onCancelButtonClick" styleClass="cancel-button" text="Cancel" />
                     </buttons>
                      <opaqueInsets>
@@ -239,34 +239,100 @@
                   </Label>
                   <HBox layoutX="11.0" layoutY="66.0" prefHeight="50.0" styleClass="table-header">
                      <children>
-                        <AnchorPane HBox.hgrow="ALWAYS">
+                        <AnchorPane prefWidth="200.0" styleClass="database-label" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label alignment="CENTER" styleClass="database-label" text="Name" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <Label alignment="CENTER" contentDisplay="CENTER" layoutX="37.0" layoutY="16.0" prefHeight="50.4" prefWidth="107.2" styleClass="database-label" text="Name" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane layoutX="10.0" layoutY="10.0" HBox.hgrow="ALWAYS">
+                        <AnchorPane layoutX="10.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label alignment="CENTER" styleClass="database-label" text="Username" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <Label alignment="CENTER" layoutX="37.0" layoutY="16.0" prefHeight="50.4" prefWidth="107.2" styleClass="database-label" text="Username" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane layoutX="648.0" layoutY="10.0" HBox.hgrow="ALWAYS">
+                        <AnchorPane layoutX="210.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label alignment="CENTER" styleClass="database-label" text="Usersince" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <Label alignment="CENTER" layoutX="37.0" layoutY="16.0" prefHeight="50.0" prefWidth="108.0" styleClass="database-label" text="Usersince" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane layoutX="436.0" layoutY="10.0" HBox.hgrow="ALWAYS">
+                        <AnchorPane layoutX="410.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label alignment="CENTER" layoutX="-15.0" styleClass="database-label" text="Role" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="0.0" />
+                              <Label alignment="CENTER" layoutX="38.0" layoutY="16.0" prefHeight="50.0" prefWidth="108.0" styleClass="database-label" text="Email" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                           </children></AnchorPane>
+                        <AnchorPane layoutX="488.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label alignment="CENTER" layoutX="38.0" layoutY="16.0" prefHeight="50.0" prefWidth="108.0" styleClass="database-label" text="Role" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                           </children></AnchorPane>
+                        <AnchorPane layoutX="520.0" layoutY="10.0" minWidth="50.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Pane minWidth="50.0" prefHeight="50.4" prefWidth="50.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane layoutX="648.0" layoutY="10.0" maxWidth="100.0" HBox.hgrow="ALWAYS">
+                        <AnchorPane layoutX="542.0" layoutY="10.0" minWidth="50.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Pane minWidth="50.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <Pane prefHeight="50.4" prefWidth="50.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
-                        <AnchorPane layoutX="648.0" layoutY="10.0" maxWidth="100.0" HBox.hgrow="ALWAYS">
+                     </children>
+                  </HBox>
+                  <HBox layoutX="11.0" layoutY="65.0" prefHeight="50.0">
+                     <children>
+                        <AnchorPane prefWidth="200.0" styleClass="database-label" HBox.hgrow="ALWAYS">
                            <children>
-                              <Pane minWidth="50.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <Label alignment="CENTER" contentDisplay="BOTTOM" layoutX="37.0" layoutY="16.0" prefHeight="50.4" prefWidth="107.2" text="Name" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <graphic>
+                                    <Label text="Label" />
+                                 </graphic>
+                              </Label>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="10.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label alignment="CENTER" layoutX="37.0" layoutY="16.0" prefHeight="50.4" prefWidth="107.2" text="Username" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="210.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label alignment="CENTER" layoutX="37.0" layoutY="16.0" prefHeight="50.0" prefWidth="108.0" text="Usersince" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="410.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label alignment="CENTER" layoutX="38.0" layoutY="16.0" prefHeight="50.0" prefWidth="108.0" text="Email" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="488.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Label alignment="CENTER" layoutX="38.0" layoutY="16.0" prefHeight="50.0" prefWidth="108.0" styleClass="database-label" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <graphic>
+                                    <Label alignment="CENTER" prefHeight="25.0" prefWidth="75.0" style="-fx-background-radius: 10; -fx-background-color: #0095FF;" text="ROLE" textFill="WHITE" />
+                                 </graphic>
+                              </Label>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="520.0" layoutY="10.0" minWidth="50.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Button contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: transparent;" text="Button" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <graphic>
+                                    <ImageView fitHeight="22.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../../images/adminicons/green_edit_write_pen_icon.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="542.0" layoutY="10.0" minWidth="50.0" HBox.hgrow="ALWAYS">
+                           <children>
+                              <Button contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: transparent;" text="Button" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <graphic>
+                                    <ImageView fitHeight="22.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../../images/adminicons/red_trash_2_icon.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
                            </children>
                         </AnchorPane>
                      </children>
