--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Stock/AdminStock.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Stock/AdminStock.fxml
@@ -183,8 +183,8 @@
                         <TextField fx:id="desiredquantityfield" layoutX="20.0" layoutY="98.0" prefHeight="30.0" promptText="Desired Quantity*" />
                         <Label layoutX="21.0" layoutY="144.0" text="Actual Quantity:" />
                         <TextField fx:id="actualquantityfield" layoutX="20.0" layoutY="139.0" prefHeight="30.0" promptText="Actual Quantity" />
-                        <Label text="Item Price:" />
-                        <TextField fx:id="itempricefield" layoutX="20.0" layoutY="180.0" prefHeight="30.0" promptText="Item Price*" />
+                        <Label text="Order Status:" />
+                        <TextField fx:id="itempricefield" layoutX="20.0" layoutY="180.0" prefHeight="30.0" promptText="Order Status*" />
                         <Label text="Item Description:" />
                         <TextArea fx:id="itemdescriptionfield" prefHeight="200.0" prefWidth="200.0" promptText="Description*" />
                      </children>
@@ -242,7 +242,7 @@
                         </AnchorPane>
                         <AnchorPane layoutX="452.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label alignment="CENTER" prefHeight="50.0" prefWidth="107.0" styleClass="database-label" text="Price" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <Label alignment="CENTER" prefHeight="50.0" prefWidth="107.0" styleClass="database-label" text="Qty" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
                         <AnchorPane layoutX="530.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
@@ -273,7 +273,7 @@
                         </AnchorPane>
                         <AnchorPane layoutX="452.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label alignment="CENTER" prefHeight="50.0" prefWidth="107.0" text="Price" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <Label alignment="CENTER" prefHeight="50.0" prefWidth="107.0" text="Qty" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
                         </AnchorPane>
                         <AnchorPane layoutX="530.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
