--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Users/AdminUsers.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Users/AdminUsers.fxml
@@ -161,7 +161,7 @@
         </AnchorPane>
     </left>
     <right>
-        <AnchorPane prefWidth="400.0" style="-fx-background-color: #f5f5f5;" BorderPane.alignment="CENTER">
+        <AnchorPane prefWidth="380.0" style="-fx-background-color: #f5f5f5;" BorderPane.alignment="CENTER">
             <padding>
                 <Insets bottom="20.0" left="10.0" right="20.0" top="20.0" />
             </padding>
@@ -239,7 +239,7 @@
                   </Label>
                   <HBox layoutX="11.0" layoutY="66.0" prefHeight="50.0" styleClass="table-header">
                      <children>
-                        <AnchorPane prefWidth="200.0" styleClass="database-label" HBox.hgrow="ALWAYS">
+                        <AnchorPane prefWidth="200.0" HBox.hgrow="ALWAYS">
                            <children>
                               <Label alignment="CENTER" contentDisplay="CENTER" layoutX="37.0" layoutY="16.0" prefHeight="50.4" prefWidth="107.2" styleClass="database-label" text="Name" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                            </children>
@@ -338,7 +338,10 @@
                      </children>
                   </HBox>
 
-                  <ListView fx:id="userslist" styleClass="list-pane" VBox.vgrow="ALWAYS" />
+                  <ListView fx:id="userslist" styleClass="list-pane" VBox.vgrow="ALWAYS">
+                     <padding>
+                        <Insets left="1.0" right="1.0" />
+                     </padding></ListView>
                </children>
                <padding>
                   <Insets top="10.0" />
